add font and make first page on project

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,26 @@
 @import "tailwindcss";
+
+@font-face {
+    font-family: 'Vazir';
+    src: url('/font/vazirFont/Vazir.eot') format('embedded-opentype'),
+    url('/font/vazirFont/Vazir.ttf') format('truetype'),
+    url('/font/vazirFont/Vazir.woff') format('woff'),
+    url('/font/vazirFont/Vazir.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Vazir';
+    src: url('/font/vazirBoldFont/Vazir-Bold.eot') format('embedded-opentype'),
+    url('/font/vazirBoldFont/Vazir-Bold.ttf') format('truetype'),
+    url('/font/vazirBoldFont/Vazir-Bold.woff') format('woff'),
+    url('/font/vazirBoldFont/Vazir-Bold.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+}
+body {
+    font-family: 'Vazir', sans-serif;
+    direction: rtl;
+    unicode-bidi: bidi-override;
+}
